--- a/app/src/main/res/layout/home_page2.xml
+++ b/app/src/main/res/layout/home_page2.xml
@@ -12,6 +12,12 @@
 
     >
 
+    <Button
+        android:id="@+id/LogOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LogOut" />
+
     <RelativeLayout
         android:layout_weight="2"
         android:layout_width="match_parent"
