--- a/app/src/main/res/layout/loginhome.xml
+++ b/app/src/main/res/layout/loginhome.xml
@@ -43,7 +43,7 @@
             android:layout_marginTop="20dp"
             android:textSize="20dp"
             android:gravity="center"
-            android:text="Register Here"
+            android:text="Register with email address"
             android:textColor="#fff" />
 
 
