--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,33 @@
     android:layout_height="match_parent"
     tools:context=".Login"
     android:background="#42f4cb"
+
+
+
     >
+
+    <TextView
+        android:id="@+id/textGrid"
+        android:text="My Mental Health"
+        android:textSize="34dp"
+        android:layout_centerInParent="true"
+        android:textColor="#ffffff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="40dp"
+
+
+
+        />
 
    <LinearLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
+
+
 
 
        <EditText
