--- a/app/src/main/res/layout/home_page2.xml
+++ b/app/src/main/res/layout/home_page2.xml
@@ -12,11 +12,7 @@
 
     >
 
-    <Button
-        android:id="@+id/LogOut"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LogOut" />
+
 
     <RelativeLayout
         android:layout_weight="2"
@@ -30,7 +26,22 @@
     android:textColor="#ffffff"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
+
+
+
+
+
     </RelativeLayout>
+
+
+    <Button
+        android:id="@+id/LogOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buttonstyleselector"
+        android:text="LogOut"
+        android:textColor="#ffffff" />
+
     <GridLayout
         android:columnCount="2"
         android:rowCount="2"
@@ -39,18 +50,22 @@
         android:alignmentMode="alignMargins"
         android:layout_weight="8"
         android:layout_width="match_parent"
+
         android:layout_height="0dp">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cardViewChat"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+
+            android:background="#42f4cb"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             app:cardElevation="0dp"
-app:cardCornerRadius="0dp"
+            app:cardCornerRadius="0dp"
             >
 
             <LinearLayout
@@ -106,6 +121,7 @@ app:cardCornerRadius="0dp"
                     android:layout_gravity="center_horizontal"
                     android:background="#ffffff"
                     android:drawableTop="@drawable/diaryicon" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -197,8 +213,15 @@ app:cardCornerRadius="0dp"
 
             </LinearLayout>
 
+
+
         </android.support.v7.widget.CardView>
 
+
     </GridLayout>
+
+
+
+
 
 </LinearLayout>
