--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingBottom="40dp"
+        android:paddingTop="30dp"
 
 
 
