--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".Register"
     android:background="#42f4cb">
-<LinearLayout
+
+
+
+    <TextView
+        android:id="@+id/textGrid"
+        android:text="My Mental Health"
+        android:textSize="34dp"
+        android:layout_centerInParent="true"
+        android:textColor="#ffffff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="40dp"
+        android:paddingTop="30dp"
+
+
+
+        />
+
+    <LinearLayout
 
     android:paddingTop="100dp"
     android:layout_width="match_parent"
