--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,12 +28,13 @@
 
     <LinearLayout
 
-    android:paddingTop="100dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="100dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-   <!-- <EditText
+        <!-- <EditText
         android:id="@+id/RegName"
 
         android:layout_width="300dp"
@@ -44,85 +46,84 @@
         android:textColorHint="#fff" />-->
 
 
-    <EditText
-        android:id="@+id/RegEmail"
+        <EditText
+            android:id="@+id/RegEmail"
 
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:background="@drawable/edittextstyle"
-        android:hint="Email"
-        android:textColor="#fff"
-        android:textColorHint="#fff" />
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittextstyle"
+            android:hint="Email"
+            android:textColor="#fff"
+            android:textColorHint="#fff" />
 
-    <EditText
-        android:id="@+id/RegPword"
+        <EditText
+            android:id="@+id/RegPword"
 
-        android:layout_width="299dp"
-        android:layout_height="66dp"
-        android:layout_gravity="center"
-        android:background="@drawable/edittextstyle"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingTop="10dp"
-        android:textColor="#fff"
-        android:textColorHint="#fff" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="Password must be at least 6 characters with no spaces"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="Password must have at least one Capital Letter"
-        android:textColor="#fff"
-        android:layout_marginTop="5dp"
+            android:layout_width="299dp"
+            android:layout_height="66dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittextstyle"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingTop="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#fff" />
 
-        android:textStyle="bold"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="15dp"
+            android:text="Password must be at least 6 characters with no spaces"
+            android:textColor="#fff"
+            android:textStyle="bold" />
 
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="Password must have at least one Number"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Password must have at least one Capital Letter"
+            android:textColor="#fff"
 
-        />
+            android:textStyle="bold"
 
+            />
 
-    <Button
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Password must have at least one Number"
+            android:textColor="#fff"
+            android:textStyle="bold"
 
-        android:id="@+id/RegBtn"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/buttonstyleselector"
-        android:gravity="center"
-        android:text="Register"
-        android:textColor="#fff" />
-
-    <TextView
-
-        android:id="@+id/LoginBk"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:text="Return To Login"
-        android:textColor="#fff" />
+            />
 
 
+        <Button
+
+            android:id="@+id/RegBtn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/buttonstyleselector"
+            android:gravity="center"
+            android:text="Register"
+            android:textColor="#fff" />
+
+        <TextView
+
+            android:id="@+id/LoginBk"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="Return To Login"
+            android:textColor="#fff"
+            android:textSize="20dp" />
 
 
-
-</LinearLayout>
+    </LinearLayout>
 
 
 
