--- a/app/src/main/res/layout/support.xml
+++ b/app/src/main/res/layout/support.xml
@@ -38,5 +38,35 @@
         android:textSize="34dp"
         android:visibility="visible" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <TextView
+            android:id="@+id/webViw"
+            android:text="Website"
+            android:textSize="27dp"
+            android:paddingTop="40dp"
+            android:paddingLeft="40dp"
+
+            android:textColor="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/numberViw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="40dp"
+            android:paddingRight="40dp"
+
+            android:gravity="right"
+            android:text="Number"
+            android:textColor="#ffffff"
+            android:textSize="27dp" />
+
+
+    </RelativeLayout>
 
 </LinearLayout>
