--- a/app/src/main/res/layout/support.xml
+++ b/app/src/main/res/layout/support.xml
@@ -41,30 +41,118 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:paddingTop="40dp">
 
-        <TextView
-            android:id="@+id/webViw"
-            android:text="Website"
-            android:textSize="27dp"
-            android:paddingTop="40dp"
-            android:paddingLeft="40dp"
-
-            android:textColor="#ffffff"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:orientation="horizontal"
 
-        <TextView
-            android:id="@+id/numberViw"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="40dp"
-            android:paddingRight="40dp"
+            android:weightSum="100">
 
-            android:gravity="right"
-            android:text="Number"
-            android:textColor="#ffffff"
-            android:textSize="27dp" />
+
+            <TextView
+                android:id="@+id/webViw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:layout_marginRight="40dp"
+                android:gravity="end"
+                android:text="Website"
+                android:textColor="#ffffff"
+                android:textSize="27dp" />
+
+            <TextView
+                android:id="@+id/numberViw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:gravity="end"
+                android:layout_marginRight="40dp"
+                android:text="Number"
+                android:textColor="#ffffff"
+                android:textSize="27dp" />
+
+        </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="100"
+                android:paddingVertical="50dp">
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none"
+                    android:layout_weight="1">
+
+                    <TableLayout
+                        android:id="@+id/tableLayout1"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:padding="10dip"
+                        android:isScrollContainer="true"
+                      xmlns:android="http://schemas.android.com/apk/res/android">
+
+                    <TableRow
+                        android:id="@+id/tableRow1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    </TableRow>
+                        <TableRow
+                            android:id="@+id/tableRow2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                    </TableRow>
+                    </TableLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#ffffff"
+                        android:orientation="horizontal"
+
+                      >
+
+
+                        <TextView
+                            android:id="@+id/test2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="work"
+                            android:gravity="end"
+                            android:layout_marginRight="50dp"
+                            android:textColor="#000000"
+                            android:textSize="27dp" />
+
+                        <TextView
+                            android:id="@+id/test1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="hello"
+                            android:gravity="end"
+                            android:layout_marginRight="50dp"
+                            android:textColor="#000000"
+                            android:textSize="27dp" />
+
+
+
+
+                    </LinearLayout>
+
+
+                </ScrollView>
+
+
+            </LinearLayout>
+
 
 
     </RelativeLayout>
