--- a/app/src/main/res/layout/support.xml
+++ b/app/src/main/res/layout/support.xml
@@ -12,12 +12,24 @@
 
     >
 
+    <TextView
+        android:id="@+id/supportViw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top|center"
+        android:text="Support"
+        android:layout_marginTop="10dp"
+        android:textColor="#ffffff"
+        android:textSize="34dp"
+        android:visibility="visible" />
+
     <Button
         android:id="@+id/LogOutSupport"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/buttonstyleselector"
         android:text="LogOut"
+        android:layout_marginTop="10dp"
         android:textColor="#ffffff" />
 
     <Button
@@ -25,28 +37,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/buttonstyleselector"
+        android:layout_marginTop="5dp"
         android:text="Back To Home"
         android:textColor="#ffffff" />
 
-    <TextView
-        android:id="@+id/supportViw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top|center"
-        android:text="Support"
-        android:textColor="#ffffff"
-        android:textSize="34dp"
-        android:visibility="visible" />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="40dp">
+        android:paddingTop="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#000000"
+
             android:orientation="horizontal"
 
             android:weightSum="100">
@@ -58,10 +63,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:layout_marginRight="40dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:gravity="end"
                 android:text="Website"
-                android:textColor="#ffffff"
-                android:textSize="27dp" />
+                android:textColor="#ff3333"
+                android:textSize="33dp" />
 
             <TextView
                 android:id="@+id/numberViw"
@@ -70,9 +76,10 @@
                 android:layout_weight="50"
                 android:gravity="end"
                 android:layout_marginRight="40dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:text="Number"
-                android:textColor="#ffffff"
-                android:textSize="27dp" />
+                android:textColor="#ff3333"
+                android:textSize="33dp" />
 
         </LinearLayout>
 
@@ -89,65 +96,312 @@
                     android:scrollbars="none"
                     android:layout_weight="1">
 
-                    <TableLayout
-                        android:id="@+id/tableLayout1"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:padding="10dip"
-                        android:isScrollContainer="true"
-                      xmlns:android="http://schemas.android.com/apk/res/android">
 
-                    <TableRow
-                        android:id="@+id/tableRow1"
-                        android:layout_width="wrap_content"
+                    <TableLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                    </TableRow>
                         <TableRow
-                            android:id="@+id/tableRow2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/row1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:layout_marginRight="40dp"
+
+                            android:gravity="end"
+                            android:text="@string/LinkToSite"
+                            android:textColor="#CC0066"
+                            android:textSize="25dp" />
+
+                        <TextView
+                            android:id="@+id/row2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:gravity="end"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:layout_marginRight="40dp"
+                            android:text="Number"
+                            android:textColor="#ffffff"
+                            android:textSize="25dp" />
 
                     </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row5"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row6"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row7"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row8"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row9"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row10"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row11"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row12"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row14"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row15"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row16"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row17"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/row18"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/row19"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/test3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:layout_marginRight="40dp"
+                                android:gravity="end"
+                                android:text="Website"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                            <TextView
+                                android:id="@+id/test4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="50"
+                                android:gravity="end"
+                                android:layout_marginRight="40dp"
+                                android:text="Number"
+                                android:textColor="#ffffff"
+                                android:textSize="27dp" />
+
+                        </TableRow>
+
+
+
+
+
+
+
+
+
                     </TableLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#ffffff"
-                        android:orientation="horizontal"
-
-                      >
-
-
-                        <TextView
-                            android:id="@+id/test2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:text="work"
-                            android:gravity="end"
-                            android:layout_marginRight="50dp"
-                            android:textColor="#000000"
-                            android:textSize="27dp" />
-
-                        <TextView
-                            android:id="@+id/test1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:text="hello"
-                            android:gravity="end"
-                            android:layout_marginRight="50dp"
-                            android:textColor="#000000"
-                            android:textSize="27dp" />
-
-
-
-
-                    </LinearLayout>
-
-
                 </ScrollView>
 
 
